--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,417 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loan_amnt</th>\n",
+       "      <th>int_rate</th>\n",
+       "      <th>installment</th>\n",
+       "      <th>home_ownership</th>\n",
+       "      <th>annual_inc</th>\n",
+       "      <th>verification_status</th>\n",
+       "      <th>pymnt_plan</th>\n",
+       "      <th>dti</th>\n",
+       "      <th>delinq_2yrs</th>\n",
+       "      <th>inq_last_6mths</th>\n",
+       "      <th>...</th>\n",
+       "      <th>percent_bc_gt_75</th>\n",
+       "      <th>pub_rec_bankruptcies</th>\n",
+       "      <th>tax_liens</th>\n",
+       "      <th>tot_hi_cred_lim</th>\n",
+       "      <th>total_bal_ex_mort</th>\n",
+       "      <th>total_bc_limit</th>\n",
+       "      <th>total_il_high_credit_limit</th>\n",
+       "      <th>hardship_flag</th>\n",
+       "      <th>debt_settlement_flag</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7000.0</td>\n",
+       "      <td>0.1894</td>\n",
+       "      <td>256.38</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>75000.0</td>\n",
+       "      <td>Not Verified</td>\n",
+       "      <td>n</td>\n",
+       "      <td>28.62</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>87.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>352260.0</td>\n",
+       "      <td>62666.0</td>\n",
+       "      <td>35000.0</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "      <td>low_risk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>40000.0</td>\n",
+       "      <td>0.1614</td>\n",
+       "      <td>975.71</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>102000.0</td>\n",
+       "      <td>Source Verified</td>\n",
+       "      <td>n</td>\n",
+       "      <td>11.72</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>294664.0</td>\n",
+       "      <td>109911.0</td>\n",
+       "      <td>9000.0</td>\n",
+       "      <td>71044.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "      <td>low_risk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11000.0</td>\n",
+       "      <td>0.2055</td>\n",
+       "      <td>294.81</td>\n",
+       "      <td>RENT</td>\n",
+       "      <td>45000.0</td>\n",
+       "      <td>Verified</td>\n",
+       "      <td>n</td>\n",
+       "      <td>37.25</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>92228.0</td>\n",
+       "      <td>36007.0</td>\n",
+       "      <td>33000.0</td>\n",
+       "      <td>46328.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "      <td>low_risk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4000.0</td>\n",
+       "      <td>0.1612</td>\n",
+       "      <td>140.87</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>38000.0</td>\n",
+       "      <td>Not Verified</td>\n",
+       "      <td>n</td>\n",
+       "      <td>42.89</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>284273.0</td>\n",
+       "      <td>52236.0</td>\n",
+       "      <td>13500.0</td>\n",
+       "      <td>52017.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "      <td>low_risk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14000.0</td>\n",
+       "      <td>0.1797</td>\n",
+       "      <td>505.93</td>\n",
+       "      <td>MORTGAGE</td>\n",
+       "      <td>43000.0</td>\n",
+       "      <td>Source Verified</td>\n",
+       "      <td>n</td>\n",
+       "      <td>22.16</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>120280.0</td>\n",
+       "      <td>88147.0</td>\n",
+       "      <td>33300.0</td>\n",
+       "      <td>78680.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>N</td>\n",
+       "      <td>low_risk</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 84 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   loan_amnt  int_rate  installment home_ownership  annual_inc  \\\n",
+       "0     7000.0    0.1894       256.38       MORTGAGE     75000.0   \n",
+       "1    40000.0    0.1614       975.71       MORTGAGE    102000.0   \n",
+       "2    11000.0    0.2055       294.81           RENT     45000.0   \n",
+       "3     4000.0    0.1612       140.87       MORTGAGE     38000.0   \n",
+       "4    14000.0    0.1797       505.93       MORTGAGE     43000.0   \n",
+       "\n",
+       "  verification_status pymnt_plan    dti  delinq_2yrs  inq_last_6mths  ...  \\\n",
+       "0        Not Verified          n  28.62          0.0             2.0  ...   \n",
+       "1     Source Verified          n  11.72          2.0             0.0  ...   \n",
+       "2            Verified          n  37.25          1.0             3.0  ...   \n",
+       "3        Not Verified          n  42.89          1.0             0.0  ...   \n",
+       "4     Source Verified          n  22.16          1.0             0.0  ...   \n",
+       "\n",
+       "   percent_bc_gt_75  pub_rec_bankruptcies  tax_liens  tot_hi_cred_lim  \\\n",
+       "0              87.5                   0.0        0.0         352260.0   \n",
+       "1               0.0                   0.0        0.0         294664.0   \n",
+       "2               7.7                   0.0        0.0          92228.0   \n",
+       "3             100.0                   0.0        0.0         284273.0   \n",
+       "4              25.0                   0.0        0.0         120280.0   \n",
+       "\n",
+       "  total_bal_ex_mort  total_bc_limit  total_il_high_credit_limit  \\\n",
+       "0           62666.0         35000.0                     10000.0   \n",
+       "1          109911.0          9000.0                     71044.0   \n",
+       "2           36007.0         33000.0                     46328.0   \n",
+       "3           52236.0         13500.0                     52017.0   \n",
+       "4           88147.0         33300.0                     78680.0   \n",
+       "\n",
+       "   hardship_flag  debt_settlement_flag    target  \n",
+       "0              N                     N  low_risk  \n",
+       "1              N                     N  low_risk  \n",
+       "2              N                     N  low_risk  \n",
+       "3              N                     N  low_risk  \n",
+       "4              N                     N  low_risk  \n",
+       "\n",
+       "[5 rows x 84 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_df = pd.read_csv(Path('Resources/2019loans.csv'))\n",
-    "test_df = pd.read_csv(Path('Resources/2020Q1loans.csv'))"
+    "test_df = pd.read_csv(Path('Resources/2020Q1loans.csv'))\n",
+    "\n",
+    "train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert categorical data to numeric and separate target feature for training data\n",
+    "train_dummies = pd.get_dummies(train_df)\n",
+    "\n",
+    "\n",
+    "X_train = train_dummies.drop('target_high_risk', axis=1)\n",
+    "X_train = X_train.drop('target_low_risk', axis=1)\n",
+    "X_train.head()\n",
+    "\n",
+    "y_train = train_dummies['target_high_risk']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert categorical data to numeric and separate target feature for testing data\n",
+    "test_dummies = pd.get_dummies(test_df)\n",
+    "\n",
+    "\n",
+    "X_test = test_dummies.drop('target_high_risk', axis=1)\n",
+    "X_test = X_test.drop('target_low_risk', axis=1)\n",
+    "X_test.head()\n",
+    "\n",
+    "y_test = test_dummies['target_high_risk']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add missing dummy variables to testing set (add debt_settlement_flag_Y)\n",
+    "X_test['debt_settlement_flag_Y'] = 0\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### I believe that random forest will do better because its better at handling categorical data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Data Score: 0.7060755336617406\n",
+      "Testing Data Score: 0.56571671629094\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train the Logistic Regression model on the unscaled data and print the model score\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "lr = LogisticRegression(max_iter=10000)\n",
+    "\n",
+    "lr.fit(X_train, y_train)\n",
+    "\n",
+    "print(f\"Training Data Score: {lr.score(X_train, y_train)}\")\n",
+    "print(f\"Testing Data Score: {lr.score(X_test, y_test)}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Data Score: 0.9182087684729063\n",
+      "Testing Data Score: -0.0456957039557635\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train a Random Forest Classifier model and print the model score\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "rf = RandomForestRegressor(random_state=42)\n",
+    "\n",
+    "rf.fit(X_train, y_train)\n",
+    "\n",
+    "print(f\"Training Data Score: {rf.score(X_train, y_train)}\")\n",
+    "print(f\"Testing Data Score: {rf.score(X_test, y_test)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The logistic regression ended up being much better than random forest, which overfit. I predicted the opposite. This may be due to random forest not preforming well becuase of the amount of dummy variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### I predict that random forest will perform better because it performs better on scaled data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scale the data\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_scaler = scaler.fit(X_train)\n",
+    "\n",
+    "X_train_scaled = X_scaler.transform(X_train)\n",
+    "X_test_scaled = X_scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Data Score: 0.710919540229885\n",
+      "Testing Data Score: 0.7601020842194811\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train the Logistic Regression model on the scaled data and print the model score\n",
+    "lr = LogisticRegression(max_iter=10000)\n",
+    "\n",
+    "lr.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "print(f\"Training Data Score: {lr.score(X_train_scaled, y_train)}\")\n",
+    "print(f\"Testing Data Score: {lr.score(X_test_scaled, y_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Data Score: 0.9181929392446634\n",
+      "Testing Data Score: -0.0460071458953637\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train a Random Forest Classifier model on the scaled data and print the model score\n",
+    "rf = RandomForestRegressor(random_state=42)\n",
+    "\n",
+    "rf.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "print(f\"Training Data Score: {rf.score(X_train_scaled, y_train)}\")\n",
+    "print(f\"Testing Data Score: {rf.score(X_test_scaled, y_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic regression performed much better on the scaled data (contrary to my prediction). Random forest overfit a lot as seen by the very good training score but poor testing score. The logistic regressesion must be good at not overfitting and handling a lot of dummy variables"
    ]
   },
   {
@@ -26,77 +431,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Convert categorical data to numeric and separate target feature for training data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert categorical data to numeric and separate target feature for testing data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# add missing dummy variables to testing set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Train the Logistic Regression model on the unscaled data and print the model score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Train a Random Forest Classifier model and print the model score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Scale the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Train the Logistic Regression model on the scaled data and print the model score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Train a Random Forest Classifier model on the scaled data and print the model score"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -110,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
